# serializer version: 1
# name: test_index_down
  dict({
    'exit_code': 1,
    'stderr': '''
      Stopping server with pid [PID]...
      Traceback (most recent call last):
        File "[PYTHON_BINDIR]/packse", line 6, in <module>
          sys.exit(entrypoint())
                   ^^^^^^^^^^^^
        File "[PROJECT_ROOT]/src/packse/cli.py", line 41, in entrypoint
          args.call(args)
        File "[PROJECT_ROOT]/src/packse/cli.py", line 120, in _call_index_down
          success = index_down()
                    ^^^^^^^^^^^^
        File "[PROJECT_ROOT]/src/packse/index.py", line 124, in index_down
          reset_pidfile(state_path)
      TypeError: reset_pidfile() takes 0 positional arguments but 1 was given
  
    ''',
    'stdout': '',
  })
# ---
# name: test_index_down_no_server_found
  dict({
    'exit_code': 1,
    'stderr': '''
      No server detected!
  
    ''',
    'stdout': '',
  })
# ---
# name: test_index_down_server_stopped
  dict({
    'exit_code': 1,
    'stderr': '''
      Server looks shutdown already.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_index_up_background
  dict({
    'exit_code': 0,
    'stderr': '''
      Starting local index with PyPI fallback at http://localhost:3141
      Writing server logs to [PWD]/.packse/server.log
      Serving distributions from ./dist
      Running in background with pid [PID]
      Stop index server with `packse index down`.
  
    ''',
    'stdout': '''
      http://localhost:3141
  
    ''',
  })
# ---
# name: test_index_up_foreground
  dict({
    'exit_code': '<stopped>',
    'stderr': '''
      Starting local index with PyPI fallback at http://localhost:3141
      Serving distributions from ./dist
      Hiding server output, use `-v` to stream server logs
      Ready! [Stop with Ctrl-C]
      Interrupted!
  
    ''',
    'stdout': '',
  })
# ---
